@@ -1,4 +1,8 @@
-﻿shmuel 26.06.2016 19:28:14 +0200 - build 577
+﻿shmuel 04.07.2016 17:35:59 +0200 - build 578
+
+1. LuaFAR: добавлена функция win.GetKeyState.
+
+shmuel 26.06.2016 19:28:14 +0200 - build 577
 
 1. Уточнение 576.2.
 
